--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,12 @@ __pycache__/
 
 .devenv/
 .direnv/
-venv/
+venv/# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
