--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pyserial = "^3.5"
 obd = "^0.7.2"
 smbus2 = "^0.4.3"
+pyubx2 = "^1.2.42"
 
 [build-system]
 requires = ["poetry-core"]
