--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ pyserial = "^3.5"
 obd = "^0.7.2"
 smbus2 = "^0.4.3"
 pyubx2 = "^1.2.42"
-nmea-parser = "^0.5.0"
+pynmeagps = "^1.0.36"
 
 [build-system]
 requires = ["poetry-core"]
